--- a/Main/package.json
+++ b/Main/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
