listGift and Header

--- a/Main/package.json
+++ b/Main/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@chakra-ui/react": "^2.8.2",
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.13.0",
@@ -32,8 +33,10 @@
     "framer-motion": "^10.16.5",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0"
   }
 }
