--- a/Main/client/package.json
+++ b/Main/client/package.json
@@ -15,7 +15,8 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
